
	* tools/apiGen/ApiGen.hs: Several marshaling improvements. Extract
	enums from the api file. Produce a list of objects and enums and use
	it when deciding how to marshal types. Marshal floats and doubles,
	flags and enums. Distinguish between GObjects and GtkObjects. Extract
	documentation of properties. Initial go at producing property
	definitions.

2005-01-25 Duncan Coutts <duncan@coutts.uklinux.net>

	* tools/apiGen/format-docs.xsl: deal with another kind of list and
	preserve formatting in definition list terms.

	* tools/apiGen/ApiGen.hs: extract properties and events from the xml
	api file (but don't use them yet). Improve the formatting of
	definition lists. Escape things inside literals properly. Eliminate
	an infinite loop bug in the line wrapping algorithm.

2005-01-24 Duncan Coutts <duncan@coutts.uklinux.net>

	* INSTALL: update the install instructions

	* Makefile.am: add missing dependency.

	* configure.ac: bump version to 0.9.7

2005-01-23 Duncan Coutts <duncan@coutts.uklinux.net>

	* tools/apiGen/formatXml.c, tools/apiGen/gapi_parser.pl: add extra
	bits of the Gtk# gapi system.

	* tools/apiGen/Makefile, tools/apiGen/mkdocxml.sh: add Makefile to
	automate everything better.

	* tools/apiGen/gen-all.sh: retire previous automation script

	* tools/apiGen/Template.chs, tools/apiGen/format-docs.xsl,
	tools/apiGen/ApiGen.hs: updates to the code generation tool. Change
	the style from single module per file to having every module in a
	single file since this is the way the gapi tool works.

	* tools/apiGen/gtk-sources.xml, tools/apiGen/gdk-sources.xml,
	tools/apiGen/pango-sources.xml, tools/apiGen/glade-sources.xml: add
	gapi-parser input files for an initial set of modules.

	* tools/apiGen/README: update the description and intructions.

2005-01-23 Axel Simon <A.Simon@kent.ac.uk>

	* Makefile.am, mk/common.mk: Resurrect dependency generation under
	the new scheme of inferring the current package. Dependency files