@@ -1,0 +1,9 @@
+<gapi-parser-input>
+  <api filename="atk-api.xml">
+    <library name="atk">
+      <namespace name="Atk">
+        <dir>atk-1.2.4/atk</dir>
+      </namespace>
+    </library>
+  </api>
+</gapi-parser-input>
